# saccade

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  build.rs  compile_commands.json  event_lib.json  golden_example.json  perf.out  perf_bench_mod.c  perf_bench_user.c
.cargo/: config.toml
src/: buffered_output.rs  cli.rs  commands.rs  counter.rs  counter_backend.rs  docs.rs  event.rs  event_library.rs  event_registry.rs  hardware_backend.rs  hardware_counters.rs  lib.rs  main.rs  oculomotor.rs  perf.rs  perfetto.rs  perfetto_trace.rs  profiler.rs  quantum.rs  sample.rs  scheduler.rs  sink.rs  source.rs  syscalls.rs  virtual_backend.rs  virtual_counter.rs
src/bpf/: sampler.bpf.c  sampler.h  sampler.skel.rs
src/commands/: generate.rs  run.rs  simulate.rs  sweep.rs
src/docs/: architecture.rs  design_data_structures.md  design_data_structures.rs  design_rust_interface.md  design_rust_interface.rs
src/perfetto/: reader.rs  trace.rs
src/scheduler/: fixed.rs  random.rs  round_robin.rs  test.rs
src/sink/: csv.rs  mod.rs  null.rs  perfetto.rs
src/source/: hardware.rs  mod.rs  virtual_source.rs
