[package]
name = "saccade"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
libbpf-rs = "0.25.0"
nom = "8.0.0"
perf-event2 = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
syscalls = { version = "0.7.0", features = ["x86", "x86_64"] }
